// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: empty tab 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="risk"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
            hotspot={
              Object {
                "assignee": "assignee",
                "assigneeUser": Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                "author": "author",
                "authorUser": Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
                "changelog": Array [],
                "comment": Array [],
                "component": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "FIL",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "creationDate": "2013-05-13T17:55:41+0200",
                "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                "line": 142,
                "message": "'3' is a magic number.",
                "project": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "TRK",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "resolution": "FIXED",
                "rule": Object {
                  "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                  "key": "squid:S2077",
                  "name": "That rule",
                  "riskDescription": undefined,
                  "securityCategory": "sql-injection",
                  "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                  "vulnerabilityProbability": "HIGH",
                },
                "status": "REVIEWED",
                "textRange": Object {
                  "endLine": 142,
                  "endOffset": 83,
                  "startLine": 142,
                  "startOffset": 26,
                },
                "updateDate": "2013-05-13T17:55:42+0200",
                "users": Array [
                  Object {
                    "active": true,
                    "local": true,
                    "login": "assignee",
                    "name": "John Doe",
                  },
                  Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                ],
              }
            }
            onUpdateHotspot={[MockFunction]}
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: fix 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="fix"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
            hotspot={
              Object {
                "assignee": "assignee",
                "assigneeUser": Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                "author": "author",
                "authorUser": Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
                "changelog": Array [],
                "comment": Array [],
                "component": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "FIL",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "creationDate": "2013-05-13T17:55:41+0200",
                "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                "line": 142,
                "message": "'3' is a magic number.",
                "project": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "TRK",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "resolution": "FIXED",
                "rule": Object {
                  "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                  "key": "squid:S2077",
                  "name": "That rule",
                  "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                  "securityCategory": "sql-injection",
                  "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                  "vulnerabilityProbability": "HIGH",
                },
                "status": "REVIEWED",
                "textRange": Object {
                  "endLine": 142,
                  "endOffset": 83,
                  "startLine": 142,
                  "startOffset": 26,
                },
                "updateDate": "2013-05-13T17:55:42+0200",
                "users": Array [
                  Object {
                    "active": true,
                    "local": true,
                    "login": "assignee",
                    "name": "John Doe",
                  },
                  Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                ],
              }
            }
            onUpdateHotspot={[MockFunction]}
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about fixing !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: review 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="review"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
            hotspot={
              Object {
                "assignee": "assignee",
                "assigneeUser": Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                "author": "author",
                "authorUser": Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
                "changelog": Array [],
                "comment": Array [],
                "component": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "FIL",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "creationDate": "2013-05-13T17:55:41+0200",
                "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                "line": 142,
                "message": "'3' is a magic number.",
                "project": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "TRK",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "resolution": "FIXED",
                "rule": Object {
                  "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                  "key": "squid:S2077",
                  "name": "That rule",
                  "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                  "securityCategory": "sql-injection",
                  "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                  "vulnerabilityProbability": "HIGH",
                },
                "status": "REVIEWED",
                "textRange": Object {
                  "endLine": 142,
                  "endOffset": 83,
                  "startLine": 142,
                  "startOffset": 26,
                },
                "updateDate": "2013-05-13T17:55:42+0200",
                "users": Array [
                  Object {
                    "active": true,
                    "local": true,
                    "login": "assignee",
                    "name": "John Doe",
                  },
                  Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                ],
              }
            }
            onUpdateHotspot={[MockFunction]}
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <HotspotViewerReviewHistoryTab
      history={
        Array [
          Object {
            "date": "2013-05-13T17:55:41+0200",
            "type": 0,
            "user": Object {
              "active": true,
              "local": true,
              "login": "author",
              "name": "John Doe",
            },
          },
        ]
      }
      hotspot={
        Object {
          "assignee": "assignee",
          "assigneeUser": Object {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          "author": "author",
          "authorUser": Object {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
          "changelog": Array [],
          "comment": Array [],
          "component": Object {
            "breadcrumbs": Array [],
            "key": "my-project",
            "name": "MyProject",
            "organization": "foo",
            "qualifier": "FIL",
            "qualityGate": Object {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": Array [
              Object {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": Array [],
          },
          "creationDate": "2013-05-13T17:55:41+0200",
          "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
          "line": 142,
          "message": "'3' is a magic number.",
          "project": Object {
            "breadcrumbs": Array [],
            "key": "my-project",
            "name": "MyProject",
            "organization": "foo",
            "qualifier": "TRK",
            "qualityGate": Object {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": Array [
              Object {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": Array [],
          },
          "resolution": "FIXED",
          "rule": Object {
            "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
            "key": "squid:S2077",
            "name": "That rule",
            "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
            "securityCategory": "sql-injection",
            "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
            "vulnerabilityProbability": "HIGH",
          },
          "status": "REVIEWED",
          "textRange": Object {
            "endLine": 142,
            "endOffset": 83,
            "startLine": 142,
            "startOffset": 26,
          },
          "updateDate": "2013-05-13T17:55:42+0200",
          "users": Array [
            Object {
              "active": true,
              "local": true,
              "login": "assignee",
              "name": "John Doe",
            },
            Object {
              "active": true,
              "local": true,
              "login": "author",
              "name": "John Doe",
            },
          ],
        }
      }
      onUpdateHotspot={[MockFunction]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly: risk 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="risk"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
            hotspot={
              Object {
                "assignee": "assignee",
                "assigneeUser": Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                "author": "author",
                "authorUser": Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
                "changelog": Array [],
                "comment": Array [],
                "component": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "FIL",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "creationDate": "2013-05-13T17:55:41+0200",
                "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                "line": 142,
                "message": "'3' is a magic number.",
                "project": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "TRK",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "resolution": "FIXED",
                "rule": Object {
                  "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                  "key": "squid:S2077",
                  "name": "That rule",
                  "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                  "securityCategory": "sql-injection",
                  "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                  "vulnerabilityProbability": "HIGH",
                },
                "status": "REVIEWED",
                "textRange": Object {
                  "endLine": 142,
                  "endOffset": 83,
                  "startLine": 142,
                  "startOffset": 26,
                },
                "updateDate": "2013-05-13T17:55:42+0200",
                "users": Array [
                  Object {
                    "active": true,
                    "local": true,
                    "login": "assignee",
                    "name": "John Doe",
                  },
                  Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                ],
              }
            }
            onUpdateHotspot={[MockFunction]}
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about risk !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: vulnerability 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="vulnerability"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
              ]
            }
            hotspot={
              Object {
                "assignee": "assignee",
                "assigneeUser": Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                "author": "author",
                "authorUser": Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
                "changelog": Array [],
                "comment": Array [],
                "component": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "FIL",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "creationDate": "2013-05-13T17:55:41+0200",
                "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                "line": 142,
                "message": "'3' is a magic number.",
                "project": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "TRK",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "resolution": "FIXED",
                "rule": Object {
                  "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                  "key": "squid:S2077",
                  "name": "That rule",
                  "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                  "securityCategory": "sql-injection",
                  "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                  "vulnerabilityProbability": "HIGH",
                },
                "status": "REVIEWED",
                "textRange": Object {
                  "endLine": 142,
                  "endOffset": 83,
                  "startLine": 142,
                  "startOffset": 26,
                },
                "updateDate": "2013-05-13T17:55:42+0200",
                "users": Array [
                  Object {
                    "active": true,
                    "local": true,
                    "login": "assignee",
                    "name": "John Doe",
                  },
                  Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                ],
              }
            }
            onUpdateHotspot={[MockFunction]}
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with comments or changelog element 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="risk"
    tabs={
      Array [
        Object {
          "content": "<p>This a <strong>strong</strong> message about risk !</p>",
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": "<p>This a <strong>strong</strong> message about fixing !</p>",
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
        Object {
          "content": <HotspotViewerReviewHistoryTab
            history={
              Array [
                Object {
                  "date": "2013-05-13T17:55:41+0200",
                  "type": 0,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                },
                Object {
                  "date": "2019-01-01",
                  "html": "<strong>test</strong>",
                  "type": 2,
                  "user": Object {
                    "active": true,
                    "local": true,
                    "login": "john.doe",
                    "name": "John Doe",
                  },
                },
              ]
            }
            hotspot={
              Object {
                "assignee": "assignee",
                "assigneeUser": Object {
                  "active": true,
                  "local": true,
                  "login": "assignee",
                  "name": "John Doe",
                },
                "author": "author",
                "authorUser": Object {
                  "active": true,
                  "local": true,
                  "login": "author",
                  "name": "John Doe",
                },
                "changelog": Array [],
                "comment": Array [
                  Object {
                    "createdAt": "2019-01-01",
                    "htmlText": "<strong>test</strong>",
                    "key": "comment-key",
                    "login": "me",
                    "markdown": "*test*",
                    "updatable": false,
                    "user": Object {
                      "active": true,
                      "local": true,
                      "login": "john.doe",
                      "name": "John Doe",
                    },
                  },
                ],
                "component": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "FIL",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "creationDate": "2013-05-13T17:55:41+0200",
                "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
                "line": 142,
                "message": "'3' is a magic number.",
                "project": Object {
                  "breadcrumbs": Array [],
                  "key": "my-project",
                  "name": "MyProject",
                  "organization": "foo",
                  "qualifier": "TRK",
                  "qualityGate": Object {
                    "isDefault": true,
                    "key": "30",
                    "name": "Sonar way",
                  },
                  "qualityProfiles": Array [
                    Object {
                      "deleted": false,
                      "key": "my-qp",
                      "language": "ts",
                      "name": "Sonar way",
                    },
                  ],
                  "tags": Array [],
                },
                "resolution": "FIXED",
                "rule": Object {
                  "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
                  "key": "squid:S2077",
                  "name": "That rule",
                  "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
                  "securityCategory": "sql-injection",
                  "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
                  "vulnerabilityProbability": "HIGH",
                },
                "status": "REVIEWED",
                "textRange": Object {
                  "endLine": 142,
                  "endOffset": 83,
                  "startLine": 142,
                  "startOffset": 26,
                },
                "updateDate": "2013-05-13T17:55:42+0200",
                "users": Array [
                  Object {
                    "active": true,
                    "local": true,
                    "login": "assignee",
                    "name": "John Doe",
                  },
                  Object {
                    "active": true,
                    "local": true,
                    "login": "author",
                    "name": "John Doe",
                  },
                ],
              }
            }
            onUpdateHotspot={[MockFunction]}
          />,
          "key": "review",
          "label": <React.Fragment>
            <span>
              hotspots.tabs.review_history
            </span>
            <span
              className="counter-badge spacer-left"
            >
              1
            </span>
          </React.Fragment>,
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This a <strong>strong</strong> message about risk !</p>",
        }
      }
    />
  </div>
</Fragment>
`;
